Fix VPAT issues. Fix bug where label text is not wrapped and labels is not associated with the 'Access Level' combo box.

--- a/projects/components/src/form/form-select/form-select.component.scss
+++ b/projects/components/src/form/form-select/form-select.component.scss
@@ -13,3 +13,7 @@
 :host(.site-selector-single-site) {
     display: none;
 }
+
+label {
+    white-space: normal;
+}
